# zfk_live

app/: build.gradle
app/src/androidTest/java/com/zhufk/zfk_live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_zhufk_zfk_1live_live_PushNative.h  native-lib.cpp  queue.c  zfk_live.c
app/src/main/java/com/zhufk/zfk_live/: MainActivity.java
app/src/main/java/com/zhufk/zfk_live/listener/: LiveStateChangeListener.java
app/src/main/java/com/zhufk/zfk_live/live/: PushNative.java
app/src/main/java/com/zhufk/zfk_live/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/zhufk/zfk_live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhufk/zfk_live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
